# tracktor-beam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  astylerc  compare_imu.py  gimbal_rpy.py  install_opencv.sh  package.xml
launch/: usbcam.launch.py  videoplayback.launch.py
services/: aruco_tracker.service  dds-agent.service  run_usb_cam.sh  start_aruco_tracker.sh  usb_cam.service
src/: ArucoTracker.cpp  MovingObjectTracker.cpp  VehicleTracker.cpp  VehicleTrackerYOLO.cpp  VideoPlayback.cpp
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt  GimbalController.cpp  GimbalController.hpp  README.md  package.xml
src/aruco_tracker/cfg/: params.yaml
src/aruco_tracker/launch/: aruco_tracker.launch.py  test.launch.py
src/precision_land/: CMakeLists.txt  PrecisionLand.cpp  PrecisionLand.hpp  package.xml  params.yaml
src/precision_land/cfg/: params.yaml
src/precision_land/launch/: precision_land.launch.py  precision_landing_system.launch.py  test.launch.py
src/precision_land_viz/: CMakeLists.txt  package.xml  tag_pose_visualizer.cpp
