<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>tracktorbeam</name>
	<version>0.0.1</version>
	<description>Tracks aruco markers</description>
	<maintainer email="jake@arkelectron.com">jake</maintainer>
	<license>BSD 3-Clause</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<!-- Dependencies -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>px4_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>OpenCV</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
