<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>precision_land_viz</name>
  <version>0.0.1</version>
  <description>Simulation-only visualization for precision landing (Gazebo markers)</description>
  <maintainer email="jake@arkelectron.com">Jacob Dahl</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <!-- ROS2 Dependencies -->
  <depend>geometry_msgs</depend>

  <!-- Gazebo Dependencies (simulation only) -->
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
